--- a/src/final/01/index.html
+++ b/src/final/01/index.html
@@ -14,7 +14,27 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1 class="title">Hello world更新したよ</h1>
-    <p>hogehoge</p>
+    <div class="container">
+      <div class="wrap">
+        <div class="left">
+          <span class="title">タイトル</span>
+          <div class="sub-wrap">
+            <div class="row">
+              <div class="row-left">
+                <span>ラベルラベル:</span>
+              </div>
+              <span>テキスト</span>
+            </div>
+            <div class="row">
+              <div class="row-left">
+                <span>ラベル:</span>
+              </div>
+              <span>テキストテキスト</span>
+            </div>
+          </div>
+        </div>
+        <div class="right"></div>
+      </div>
+    </div>
   </body>
 </html>
