--- a/src/final/02/index.html
+++ b/src/final/02/index.html
@@ -16,15 +16,24 @@
   <body>
     <div class="container">
       <div class="wrap">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="left">
+          <span class="title">タイトル</span>
+          <div class="sub-wrap">
+            <div class="row">
+              <div class="row-left">
+                <span>ラベルラベル:</span>
+              </div>
+              <span>テキスト</span>
+            </div>
+            <div class="row">
+              <div class="row-left">
+                <span>ラベル:</span>
+              </div>
+              <span>テキストテキスト</span>
+            </div>
+          </div>
+        </div>
+        <div class="right"></div>
       </div>
     </div>
   </body>
