--- a/src/start/02/index.html
+++ b/src/start/02/index.html
@@ -17,23 +17,13 @@
     <div class="container">
       <div class="wrap">
         <div class="left">
-          <span class="title">タイトル</span>
-          <div class="sub-wrap">
-            <div class="row">
-              <div class="row-left">
-                <span>ラベルラベル:</span>
-              </div>
-              <span>テキスト</span>
-            </div>
-            <div class="row">
-              <div class="row-left">
-                <span>ラベル:</span>
-              </div>
-              <span>テキストテキスト</span>
-            </div>
-          </div>
+          <div class="left-box"></div>
         </div>
-        <div class="right"></div>
+        <div class="right">
+          <div class="right-box"></div>
+          <div class="right-box"></div>
+          <div class="right-box"></div>
+        </div>
       </div>
     </div>
   </body>
